# SPIDAM

./: CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
controller/: __init__.py  file_passer.py
model/: figures.py  state.py  utils.py
view/: __init__.py  widgets.py  window.py
